# RoundScreenDemo

./: .gitignore  .gitmodules  CMakeLists.txt  platformio.ini  sdkconfig.defaults
include/: GC9A01_driver.h  GC9A01_driver_configuration.h  QMI8658_driver.h  QMI8658_driver_configuration.h  ble_configuration.h  ble_controller.h  configuration.h  configuration_controller.h  connectivity_controller.h  dashboard_state.h  dashboard_ui.h  display_engine.h  iaccelerometer.h  idisplay_driver.h  imessage_assembler.h  iobservable.h  json_configuration_parser.h  length_payload_assembler.h  main_app.h  observable_value.h  preferences_controller.h  single_observable.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/Connectivity/: ble_configuration.h  ble_controller.cpp  ble_controller.h  connectivity_controller.cpp  iconnection_observer.h
main/Core/: configuration.h  main_app.cpp  main_app.h
main/Decoders/: json_configuration_parser.cpp  json_configuration_parser.h
main/Sensors/: accelerometer_controller.cpp  accelerometer_controller.h
main/Storage/: preferences_controller.cpp  preferences_controller.h
src/: GC9A01_driver.cpp  QMI8658_driver.cpp  accelerometer_controller.cpp  ble_controller.cpp  configuration_controller.cpp  connectivity_controller.cpp  dashboard_ui.cpp  display_engine.cpp  json_configuration_parser.cpp  main.cpp  main_app.cpp  preferences_controller.cpp
src/Connectivity/: ble_controller.h
src/Core/: configuration.h  dashboard_state.h  main_app.h
src/Decoders/: json_configuration_parser.cpp  json_configuration_parser.h
(+4 files in other folders)
